Brush the readme to reflect current implementation.